--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .header {
   background-color: #fff;
@@ -9,98 +10,189 @@ html {
   position: fixed;
   width: 100%;
   z-index: 5;
-  padding: 1rem 0; }
+  padding: 1rem 0;
+}
+a {
+  text-decoration: none;
+}
+.header-content {
+  grid-column: start-head/end-head;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-post {
+  cursor: pointer;
+}
+@media only screen and (max-width: 37.5em) {
   .header-content {
-    grid-column: start-head/end-head;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-    @media only screen and (max-width: 37.5em) {
-      .header-content {
-        flex-wrap: wrap; } }
-  .header-logo {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly; }
-    .header-logo svg {
-      height: 5rem;
-      width: 5rem; }
-    .header-logo span {
-      text-decoration: none;
-      font-family: "Courier New", Courier, monospace;
-      font-size: 3rem; }
+    flex-wrap: wrap;
+  }
+}
+.header-logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.header-logo svg {
+  height: 5rem;
+  width: 5rem;
+}
+.header-logo span {
+  text-decoration: none;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 3rem;
+}
+.header-search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45%;
+}
+.header-search > * {
+  border-radius: 100px;
+  background-color: #f5f1f1;
+}
+.header-search input {
+  border: none;
+  font-size: 1.6rem;
+  padding: 1rem 1.5rem;
+  width: 100%;
+  margin-right: -3.5rem;
+}
+.header-search input:active,
+.header-search input:focus {
+  outline: none;
+  border: none;
+}
+.header-search button {
+  outline: none;
+  border: none;
+}
+.header-search-icon {
+  height: 2rem;
+  width: 2rem;
+  fill: grey;
+}
+@media only screen and (max-width: 37.5em) {
   .header-search {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 45%; }
-    .header-search > * {
-      border-radius: 100px;
-      background-color: #f5f1f1; }
-    .header-search input {
-      border: none;
-      font-size: 1.6rem;
-      padding: 1rem 1.5rem;
-      width: 100%;
-      margin-right: -3.5rem; }
-      .header-search input:active, .header-search input:focus {
-        outline: none;
-        border: none; }
-    .header-search button {
-      outline: none;
-      border: none; }
-    .header-search-icon {
-      height: 2rem;
-      width: 2rem;
-      fill: grey; }
-    @media only screen and (max-width: 37.5em) {
-      .header-search {
-        order: 1;
-        flex: 0 0 80%;
-        margin: 1rem auto; } }
+    order: 1;
+    flex: 0 0 80%;
+    margin: 1rem auto;
+  }
+}
+
+.header-icon {
+  height: 2rem;
+  width: 2rem;
+  position: absolute;
+  cursor: pointer;
+}
+.header-icon-close {
+  opacity: 0;
+  visibility: hidden;
+}
+.header-actions {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+
+.header-action-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-actions li {
+  font-size: 1.6rem;
+  text-transform: capitalize;
+}
+.header-menu-list {
+  position: absolute;
+  border: none;
+  top: 100%;
+  right: 5rem;
+  max-height: 40rem;
+  background-color: white;
+  opacity: 0;
+  visibility: hidden;
+  list-style-type: none;
+}
+.header-menu-list li {
+  text-align: center;
+  padding: 1rem 1.5rem;
+  font-size: 1.6rem;
+  text-transform: capitalize;
+}
+.header-menu-list li:hover {
+  background-color: #fcf7f7;
+}
+.header-menu-list li a {
+  text-decoration: none;
+  color: gray;
+}
+#menu-view {
+  opacity: 0;
+  visibility: hidden;
+}
+
+input[type="checkbox"]:checked ~ .header-menu-list {
+  opacity: 1;
+  visibility: visible;
+  display: block;
+}
+
+input[type="checkbox"]:checked ~ .header-menu-view .header-icon-close {
+  opacity: 1;
+  visibility: visible;
+}
+
+input[type="checkbox"]:checked ~ .header-menu-view .header-icon-open {
+  opacity: 0;
+  visibility: hidden;
+}
+@media only screen and (max-width: 37.5em) {
   .header-actions {
-    width: 20%; }
-    .header-actions-list {
-      list-style: none;
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
-      height: 100%; }
-      .header-actions-list li a {
-        text-decoration: none;
-        color: blue;
-        font-size: 1.6rem;
-        text-transform: capitalize; }
-    @media only screen and (max-width: 37.5em) {
-      .header-actions {
-        width: 40%; } }
+    width: 40%;
+  }
+}
 
 .new-post {
   padding-top: 15rem;
-  background-color: #f3eded; }
+  background-color: #f3eded;
+}
+.new-post-container {
+  display: grid;
+  width: 50%;
+  margin: 0 auto;
+  grid-template-rows: repeat(2, min-content);
+}
+@media only screen and (max-width: 37.5em) {
   .new-post-container {
-    display: grid;
-    width: 50%;
-    margin: 0 auto;
-    grid-template-rows: repeat(2, min-content); }
-    @media only screen and (max-width: 37.5em) {
-      .new-post-container {
-        width: 70%; } }
-  .new-post-caption {
-    margin: 1.5rem 0;
-    padding: 1rem 1.5rem;
-    background-color: #fff;
-    outline: none;
-    border: none; }
-  .new-post-submit {
-    width: 10rem;
-    cursor: pointer;
-    background-color: blue;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 1rem 2rem;
-    outline: none;
-    border: none; }
+    width: 70%;
+  }
+}
+.new-post-caption {
+  margin: 1.5rem 0;
+  padding: 1rem 1.5rem;
+  background-color: #fff;
+  outline: none;
+  border: none;
+}
+.new-post-submit {
+  width: 10rem;
+  cursor: pointer;
+  background-color: blue;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+  outline: none;
+  border: none;
+}
 
 .hide {
-  display: none; }
+  display: none;
+}
