--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -103,6 +103,7 @@
       id="chat_input"
       class="mytextarea"
       placeholder="type here"
+      required
     />
     <button type="submit">send</button>
   </form>
