--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -11,6 +11,7 @@
       name="caption"
       placeholder="Write a caption"
       class="new-post-caption mytextarea"
+      required
     ></textarea>
     <input class="new-post-submit" type="submit" value="Share" />
   </form>
