--- a/views/password-reset.ejs
+++ b/views/password-reset.ejs
@@ -29,12 +29,14 @@
             name="new_password"
             class="input"
             placeholder="Password"
+            required
           />
           <input
             type="password"
             name="new_confirm_password"
             class="input"
             placeholder="Confirm Password"
+            required
           />
           <input type="hidden" name="resetLink" value="<%=token%>" />
           <button class="control-button" type="submit">Submit</button>
