--- a/views/post.ejs
+++ b/views/post.ejs
@@ -49,8 +49,8 @@
           </svg>
           <%}%>
         </a>
-        <a href="#" class="post-stats-icon post-stats-comment">
-          <svg class="">
+        <a class="post-stats-icon">
+          <svg class="post-stats-comment">
             <use xlink:href="/image/sprite.svg#icon-bubble2"></use>
           </svg>
         </a>
