--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -126,7 +126,7 @@ body {
 .post-comments {
   padding: 2rem;
   max-height: 20rem;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .post-comments-form {
   display: flex;
