--- a/views/user-sign-up.ejs
+++ b/views/user-sign-up.ejs
@@ -53,18 +53,26 @@
             name="username"
             required
           />
-          <input type="email" class="input" placeholder="Email" name="email" />
+          <input
+            type="email"
+            class="input"
+            placeholder="Email"
+            name="email"
+            required
+          />
           <input
             type="password"
             class="input"
             placeholder="Password"
             name="password"
+            required
           />
           <input
             type="password"
             class="input"
             placeholder="Confirm password"
             name="passwordConfirm"
+            required
           />
           <button class="control-button" type="submit">Sign Up</button>
         </form>
