--- a/views/post-view.ejs
+++ b/views/post-view.ejs
@@ -103,13 +103,8 @@
             <%}%>
           </a>
           <a href="#" class="popup-stats-icon">
-            <svg class="">
+            <svg class="post-stats-comment">
               <use xlink:href="/image/sprite.svg#icon-bubble2"></use>
-            </svg>
-          </a>
-          <a href="#" class="popup-stats-icon">
-            <svg class="">
-              <use xlink:href="/image/sprite.svg#icon-direction"></use>
             </svg>
           </a>
         </div>
@@ -132,6 +127,7 @@
         <input
           type="text"
           name="content"
+          class="mytextarea input-comment"
           placeholder="Add comments . . ."
           required
         />
