--- a/assets/css/update-user.css
+++ b/assets/css/update-user.css
@@ -19,7 +19,47 @@ body {
   min-height: 42rem;
   padding-top: 18rem;
 }
-
+.form__radio-group {
+  display: inline-block;
+}
+.form__radio-input {
+  display: none;
+}
+.form__radio-button {
+  height: 2rem;
+  width: 2rem;
+  border: 5px solid #0f25ac;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -0.5rem;
+}
+.form__radio-label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  position: relative;
+  padding-left: 4.5rem;
+}
+.form__radio-button::after {
+  content: "";
+  display: block;
+  height: 1.3rem;
+  width: 1.3rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #0f25ac;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1;
+}
 .settings-form {
   margin: 0 auto;
   width: 40vw;
