--- a/views/post.ejs
+++ b/views/post.ejs
@@ -21,7 +21,11 @@
   <div class="post-content">
     <div class="post-caption">
       <a href="#">
-        <img class="post-caption-user" src="<%=post.user.avatar%>" />
+        <img
+          class="post-caption-user"
+          src="<%=post.user.avatar%>"
+          alt="<%=post.caption%>"
+        />
       </a>
 
       <p class="post-caption-body">
@@ -52,11 +56,6 @@
         <a class="post-stats-icon">
           <svg class="post-stats-comment">
             <use xlink:href="/image/sprite.svg#icon-bubble2"></use>
-          </svg>
-        </a>
-        <a href="#" class="post-stats-icon">
-          <svg class="">
-            <use xlink:href="/image/sprite.svg#icon-direction"></use>
           </svg>
         </a>
       </div>
