--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -11,7 +11,7 @@
         <use xlink:href="/image/sprite.svg#icon-circle-with-cross"></use>
       </svg>
     </button>
-    <input type="file" class="new-post-file" name="image" required />
+    <input type="file" class="new-post-file" name="image" multiple required />
     <textarea
       name="caption"
       placeholder="Write a caption"
