--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,10 +1,12 @@
 <div id="comment-<%=comment.id%>" class="post-comment">
-  <a href="#">
+  <a href="/users/profile/<%=comment.user.id%>">
     <img class="post-comment-user" src="<%=comment.user.avatar%>" />
   </a>
   <div class="post-comment-block">
     <p class="post-comment-body">
-      <a href="/users/profile/<%=post.user.id%>" class="post-comment-username"
+      <a
+        href="/users/profile/<%=comment.user.id%>"
+        class="post-comment-username"
         ><%=comment.user.username%></a
       >
       <span class="post-comment-content"><%=comment.content%></span>
