--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -86,7 +86,10 @@
     <%}else{%> <%for (post of posts){%>
     <a class="profile-image-block" href="/posts/view/<%=post.id%>">
       <figure class="preview">
-        <img class="preview-image" src="<%=post.image%>" />
+        <%if(post.image.length>1){%>
+        <div class="preview-multiple">+<%=post.image.length-1%></div>
+        <%}%>
+        <img class="preview-image" src="<%=post.image[0]%>" />
         <div class="preview-overlay">
           <div class="preview-overlay-content">
             <div class="preview-overlay-item">
